# lessons_pub

./: README.md  clc  default_functions.h  defined_functions.c  defined_functions.h  integral.c  real.h  root.c
grand_task_1/: CMakeLists.txt  abs.h  array_io.c  array_io.h  bubble_sort.c  bubble_sort.h  cmp.c  cmp.h  config.h  generate.c  generate.h  heap_sort.c  heap_sort.h  inspect.c  inspect.h  main.c  rand.c  rand.h  shell_sort.c  shell_sort.h  sort.c  sort.h  swap.c  swap.h  test.c  test.h  type.h  ui.c  ui.h
grand_task_2/: default_functions.asm  default_functions.c  default_functions.h  defined_functions.c  defined_functions.h  differentiable_function_t.h  func_t.h  funcs.c  funcs.h  integral.c  integral.h  main.c  makefile  real_function.h  root.c  root.h
